--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.4
 dj-database-url==0.5.0
 Django==3.2.1
+django-crispy-forms==1.11.2
 python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
